manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nyan-service
  labels:
    app: nyan
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nyan
